// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Should match the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    cardData={
      Object {
        "category": "planets",
        "favorite": false,
        "main1": "200K",
        "main2": "Warm",
        "name": "Test Planet",
        "secInfoMain": Array [
          "Jim",
          "Bob",
        ],
        "secInfoOther": "None",
        "type": "Fun Terrrain",
      }
    }
    cardType="planets"
    favorite="favorites"
    handleStoreData={[MockFunction]}
    updateFavorites={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="card-front"
        >
          <div
            className="image-side-title card-title card-header-planets"
          >
            <h1>
              Test Planet
            </h1>
            <i
              className="fas fa-star false favorite-btn"
              onClick={[Function]}
              role="presentation"
            />
          </div>
          <img
            alt=""
            className="front-image"
            src="./images/Test Planet.jpg"
          />
        </div>,
        <div
          className=" card-title card-header-planets"
        >
          <h1>
            Test Planet
          </h1>
          <i
            className="fas fa-star false favorite-btn"
            onClick={[Function]}
            role="presentation"
          />
        </div>,
        <h1
          className="card-type"
        >
          Fun Terrrain
        </h1>,
        <div
          className="stats-container"
        >
          <div
            className="stat"
          >
            <h1>
              Population
            </h1>
            <p>
              200K 
            </p>
          </div>
          <div
            className="div-line"
          />
          <div
            className="stat"
          >
            <h1>
              Climate
            </h1>
            <p>
              Warm 
            </p>
          </div>
        </div>,
        <div>
          <div
            className="homeworld-title card-header-planets"
          >
            <h1
              className="card-header-planets"
            >
              Residents
            </h1>
          </div>
          <ResidentsScroller
            content1={
              Array [
                "Jim",
                "Bob",
              ]
            }
            content2="None"
          />
        </div>,
        <img
          alt="card icon"
          className="card-icon"
          src="./images/planets_icon.svg"
        />,
      ],
      "className": "card false false",
      "onClick": [Function],
      "role": "presentation",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="image-side-title card-title card-header-planets"
            >
              <h1>
                Test Planet
              </h1>
              <i
                className="fas fa-star false favorite-btn"
                onClick={[Function]}
                role="presentation"
              />
            </div>,
            <img
              alt=""
              className="front-image"
              src="./images/Test Planet.jpg"
            />,
          ],
          "className": "card-front",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h1>
                  Test Planet
                </h1>,
                <i
                  className="fas fa-star false favorite-btn"
                  onClick={[Function]}
                  role="presentation"
                />,
              ],
              "className": "image-side-title card-title card-header-planets",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Test Planet",
                },
                "ref": null,
                "rendered": "Test Planet",
                "type": "h1",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "fas fa-star false favorite-btn",
                  "onClick": [Function],
                  "role": "presentation",
                },
                "ref": null,
                "rendered": null,
                "type": "i",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "",
              "className": "front-image",
              "src": "./images/Test Planet.jpg",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1>
              Test Planet
            </h1>,
            <i
              className="fas fa-star false favorite-btn"
              onClick={[Function]}
              role="presentation"
            />,
          ],
          "className": " card-title card-header-planets",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Test Planet",
            },
            "ref": null,
            "rendered": "Test Planet",
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "fas fa-star false favorite-btn",
              "onClick": [Function],
              "role": "presentation",
            },
            "ref": null,
            "rendered": null,
            "type": "i",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Fun Terrrain",
          "className": "card-type",
        },
        "ref": null,
        "rendered": "Fun Terrrain",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="stat"
            >
              <h1>
                Population
              </h1>
              <p>
                200K 
              </p>
            </div>,
            <div
              className="div-line"
            />,
            <div
              className="stat"
            >
              <h1>
                Climate
              </h1>
              <p>
                Warm 
              </p>
            </div>,
          ],
          "className": "stats-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h1>
                  Population
                </h1>,
                <p>
                  200K 
                </p>,
              ],
              "className": "stat",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Population",
                },
                "ref": null,
                "rendered": "Population",
                "type": "h1",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "200K ",
                },
                "ref": null,
                "rendered": "200K ",
                "type": "p",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "div-line",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h1>
                  Climate
                </h1>,
                <p>
                  Warm 
                </p>,
              ],
              "className": "stat",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Climate",
                },
                "ref": null,
                "rendered": "Climate",
                "type": "h1",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Warm ",
                },
                "ref": null,
                "rendered": "Warm ",
                "type": "p",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="homeworld-title card-header-planets"
            >
              <h1
                className="card-header-planets"
              >
                Residents
              </h1>
            </div>,
            <ResidentsScroller
              content1={
                Array [
                  "Jim",
                  "Bob",
                ]
              }
              content2="None"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h1
                className="card-header-planets"
              >
                Residents
              </h1>,
              "className": "homeworld-title card-header-planets",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Residents",
                "className": "card-header-planets",
              },
              "ref": null,
              "rendered": "Residents",
              "type": "h1",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "content1": Array [
                "Jim",
                "Bob",
              ],
              "content2": "None",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "card icon",
          "className": "card-icon",
          "src": "./images/planets_icon.svg",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="card-front"
          >
            <div
              className="image-side-title card-title card-header-planets"
            >
              <h1>
                Test Planet
              </h1>
              <i
                className="fas fa-star false favorite-btn"
                onClick={[Function]}
                role="presentation"
              />
            </div>
            <img
              alt=""
              className="front-image"
              src="./images/Test Planet.jpg"
            />
          </div>,
          <div
            className=" card-title card-header-planets"
          >
            <h1>
              Test Planet
            </h1>
            <i
              className="fas fa-star false favorite-btn"
              onClick={[Function]}
              role="presentation"
            />
          </div>,
          <h1
            className="card-type"
          >
            Fun Terrrain
          </h1>,
          <div
            className="stats-container"
          >
            <div
              className="stat"
            >
              <h1>
                Population
              </h1>
              <p>
                200K 
              </p>
            </div>
            <div
              className="div-line"
            />
            <div
              className="stat"
            >
              <h1>
                Climate
              </h1>
              <p>
                Warm 
              </p>
            </div>
          </div>,
          <div>
            <div
              className="homeworld-title card-header-planets"
            >
              <h1
                className="card-header-planets"
              >
                Residents
              </h1>
            </div>
            <ResidentsScroller
              content1={
                Array [
                  "Jim",
                  "Bob",
                ]
              }
              content2="None"
            />
          </div>,
          <img
            alt="card icon"
            className="card-icon"
            src="./images/planets_icon.svg"
          />,
        ],
        "className": "card false false",
        "onClick": [Function],
        "role": "presentation",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="image-side-title card-title card-header-planets"
              >
                <h1>
                  Test Planet
                </h1>
                <i
                  className="fas fa-star false favorite-btn"
                  onClick={[Function]}
                  role="presentation"
                />
              </div>,
              <img
                alt=""
                className="front-image"
                src="./images/Test Planet.jpg"
              />,
            ],
            "className": "card-front",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h1>
                    Test Planet
                  </h1>,
                  <i
                    className="fas fa-star false favorite-btn"
                    onClick={[Function]}
                    role="presentation"
                  />,
                ],
                "className": "image-side-title card-title card-header-planets",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Test Planet",
                  },
                  "ref": null,
                  "rendered": "Test Planet",
                  "type": "h1",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "fas fa-star false favorite-btn",
                    "onClick": [Function],
                    "role": "presentation",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "",
                "className": "front-image",
                "src": "./images/Test Planet.jpg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h1>
                Test Planet
              </h1>,
              <i
                className="fas fa-star false favorite-btn"
                onClick={[Function]}
                role="presentation"
              />,
            ],
            "className": " card-title card-header-planets",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Test Planet",
              },
              "ref": null,
              "rendered": "Test Planet",
              "type": "h1",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "fas fa-star false favorite-btn",
                "onClick": [Function],
                "role": "presentation",
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Fun Terrrain",
            "className": "card-type",
          },
          "ref": null,
          "rendered": "Fun Terrrain",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="stat"
              >
                <h1>
                  Population
                </h1>
                <p>
                  200K 
                </p>
              </div>,
              <div
                className="div-line"
              />,
              <div
                className="stat"
              >
                <h1>
                  Climate
                </h1>
                <p>
                  Warm 
                </p>
              </div>,
            ],
            "className": "stats-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h1>
                    Population
                  </h1>,
                  <p>
                    200K 
                  </p>,
                ],
                "className": "stat",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Population",
                  },
                  "ref": null,
                  "rendered": "Population",
                  "type": "h1",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "200K ",
                  },
                  "ref": null,
                  "rendered": "200K ",
                  "type": "p",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "div-line",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h1>
                    Climate
                  </h1>,
                  <p>
                    Warm 
                  </p>,
                ],
                "className": "stat",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Climate",
                  },
                  "ref": null,
                  "rendered": "Climate",
                  "type": "h1",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Warm ",
                  },
                  "ref": null,
                  "rendered": "Warm ",
                  "type": "p",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="homeworld-title card-header-planets"
              >
                <h1
                  className="card-header-planets"
                >
                  Residents
                </h1>
              </div>,
              <ResidentsScroller
                content1={
                  Array [
                    "Jim",
                    "Bob",
                  ]
                }
                content2="None"
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h1
                  className="card-header-planets"
                >
                  Residents
                </h1>,
                "className": "homeworld-title card-header-planets",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Residents",
                  "className": "card-header-planets",
                },
                "ref": null,
                "rendered": "Residents",
                "type": "h1",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "content1": Array [
                  "Jim",
                  "Bob",
                ],
                "content2": "None",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "card icon",
            "className": "card-icon",
            "src": "./images/planets_icon.svg",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Card Should render an empty div if cardObj is null 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    cardData={
      Object {
        "category": "planets",
        "favorite": false,
        "main1": "200K",
        "main2": "Warm",
        "name": "Test Planet",
        "secInfoMain": Array [
          "Jim",
          "Bob",
        ],
        "secInfoOther": "None",
        "type": "Fun Terrrain",
      }
    }
    cardType="planets"
    handleStoreData={null}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
